--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="img/Perfil 1.png" alt="">
             </div>
             <h1>Ana Yelitza</h1>
-            <h2>Estudiante de Diseño y Desarrollo de Software</h2>
+            <h2>Diseño y Desarrollo de Software</h2>
             <div class="redes">
                 <a title="Instagram" href="Instagram"><i class="fa-brands fa-instagram"></i></a>
                 <a title="Linkedin" href="https://www.linkedin.com/in/ana-yelitza-ib%C3%A1%C3%B1ez-chot%C3%B3n-b38738244/"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -51,7 +51,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Ana Yelitza Ibáñez Chotón.</span> Estudiante apasionada de diseño y desarrollo de software en el último ciclo de mi carrera. Este portafolio no solo es mi presentación, sino también un reflejo de todo lo que he aprendido hasta ahora y una plataforma para seguir explorando y creciendo en este emocionante viaje académico y profesional.....</p>
+            <p><span>Hola, soy Ana Yelitza Ibáñez Chotón.</span> Este portafolio no solo es mi presentación, sino también un reflejo de todo lo que he aprendido hasta ahora y una plataforma para seguir explorando y creciendo en este emocionante viaje académico y profesional.....</p>
 
             <div class="fila">
                 <!-- datos personales -->
